Fix alignment of logo, search box and account options.

--- a/web/css/source/_theme.less
+++ b/web/css/source/_theme.less
@@ -87,16 +87,20 @@ p,li,dt,dd,td,th,details,button,form,a,div,details {
       float: right;
       font-size: 0;
       border-bottom: none;
-      padding-bottom: 10px !important;
-      margin: 0;
-      padding: 0;
+      padding: 0 0 10px 0;
+      margin: 0 0 0 auto;
       width: auto;
       list-style: none none;
-      margin-left: auto;
     }
   }
   .panel.wrapper{
     border-bottom: none;
+  }
+  .header.content {
+    padding-top: 0;
+    .minicart-wrapper {
+      clear: right;
+    }
   }
 }
 // Luma minor hacks
